--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,26 +6,23 @@
 <br>
 <router-outlet></router-outlet>
 <div class="container">
-  <!-- Modal -->
-  <div class="modal fade" id="myModal" role="dialog">
+
+	<div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
-    
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Contact us</h4>
-        </div>
-        <div class="modal-body">
-          <h4>EMIT Applications Sales & Marketing</h4>
-          <h5>Contact us and send a feedback at: <a href="mailto:sos.analysts.ug@exxonmobil.com">sos.analysts.ug@exxonmobil.com</a></h5>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-      
-    </div>
-  </div>
-  
+
+		<div class="modal-content">
+			<div class="modal-header">
+				<h4 class="modal-title pull-left">Contact us</h4>
+			</div>
+			<div class="modal-body">
+				<h4>EMIT Applications Sales & Marketing</h4>
+				<p style="font-weight: 500; margin-bottom: 20px; margin-top: 5px;">
+					Contact us and send a feedback at: <a href="mailto:sos.analysts.ug@exxonmobil.com">sos.analysts.ug@exxonmobil.com</a></p>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-danger btn-cancel" data-dismiss="modal">Close</button>
+			</div>
+		</div>
+	</div>
+	</div>
 </div>
