--- a/src/app/protocol/protocol.component.css
+++ b/src/app/protocol/protocol.component.css
@@ -1,47 +1,15 @@
-.content{
-    padding-top: 10rem;
+.app-content{
+    margin-top: 15vh;
 }
- html {
-            font-family: EMprint;
-        }
-
-        .material-icons.md-18 {
-            font-size: 18px;
-        }
-
-        .material-icons.md-24 {
-            font-size: 24px;
-        }
-
-        .material-icons.md-36 {
-            font-size: 36px;
-        }
-
-        .material-icons.md-48 {
-            font-size: 48px;
-        }
-
-        @keyframes blink {
-            50% {
-                opacity: 0;
-            }
-        }
-
-        @keyframes rotate {
-            from {
-                transform: rotateY(0deg);
-            }
-
-            to {
-                transform: rotateY(2880deg);
-            }
-        }
-
-
-        .blink:hover {
-            animation: blink 1s cubic-bezier(.67,0,.33,1) infinite;
-        }
-
-        .itsm {
-            animation: rotate 8s cubic-bezier(1,0,0,1) infinite;
-        }
+#HeaderField{
+    text-align: center;
+}
+.card-text{
+    padding-top: 1.3rem;
+    text-align: center;
+}
+.card-body{
+    min-height: 27rem;
+    text-align: center;
+    color: gray;
+}
