--- a/src/app/member/member.component.css
+++ b/src/app/member/member.component.css
@@ -1,5 +1,5 @@
 .sub-header {
-    margin-top: 45px;
+    margin-top: 44px;
     padding: 0;
 }
 
@@ -15,6 +15,10 @@
     padding-bottom: 8px;
     margin-bottom: 0;
     font-size: 1.1rem;
+}
+
+.btn {
+    cursor: pointer;
 }
 
 
