--- a/src/app/oncall-schedule/oncall-schedule.component.html
+++ b/src/app/oncall-schedule/oncall-schedule.component.html
@@ -136,7 +136,7 @@
       </div>
 
       <div class="row">
-        <div class="col-11" style=" text-align: center;">
+        <div class="col-12" style=" text-align: center;">
           <button *ngIf="groupIDSelected != 0 && scheduleIdSelected == 0 " type="button" class="btn btn-primary btn-submit" (click)="addSchedule()"> ADD </button>
           <button *ngIf="scheduleIdSelected != 0 " type="button" class="btn btn-primary btn-submit" (click)="updateSchedule()" > UPDATE </button>
           <button *ngIf="scheduleIdSelected != 0 " type="button" class="btn btn-danger btn-delete" (click)="removeSchedule()" > DELETE </button>
@@ -144,14 +144,23 @@
       </div>
     </div>
 
-    <div class="col-7" style="padding: 5vh; padding-top: 0; padding-bottom: 0;">
+    <div class="col-7 box-calendar" >
         <div class="col-12 btn-calendar-action" *ngIf="groupIDSelected != 0">
           <button type="button" class="btn btn-info btn-today" (click)="getToday()" > TODAY </button>
           <button type="button" class="btn btn-info " (click)="prevMonth()" > PREV </button>
           <button type="button" class="btn btn-info " (click)="nextMonth()" > NEXT </button>
         </div>
+      
       <angular2-fullcalendar id="myCalendar" *ngIf="isSeclectedGroup" [options]="calendarOptions"></angular2-fullcalendar>
 
+
     </div>
+    <div class="col-6" [hidden]="IsHiddenTemp" 
+    *ngIf="groupIDSelected != 0"
+     style="height: 450px;position:absolute; min-width:53%;
+      right:41px;opacity:0.4; ">
+        <angular2-fullcalendar id="tempCalendar" [options]="tempCalendarOptions"  ></angular2-fullcalendar>
+    </div>
+  
   </div>
 </div>
